--- a/header/header.css
+++ b/header/header.css
@@ -1,6 +1,7 @@
 #flipkart-navbar {
-    background-color: #2874f0;
+    background-color: rgb(84,121,128);
     color: #FFFFFF;
+    box-shadow: 0px 2px 5px 0px gray;
 }
 
 .row1{
@@ -20,8 +21,8 @@
 }
 
 .flipkart-navbar-button {
-    background-color: #ffe11b;
-    border: 1px solid #ffe11b;
+    background-color: rgb(157,224,173);
+    border: 1px solid rgb(157,224,173);
     border-radius: 0 2px 2px 0;
     color: #565656;
     padding: 10px 0;
